# FVM-RG-Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-course_work-Desktop_Qt_6_4_2_MSVC2019_64bit/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja
build-course_work-Desktop_Qt_6_4_2_MSVC2019_64bit/Debug/.cmake/api/v1/reply/: cache-v2-9a03bc7679ba663909f2.json  cmakeFiles-v1-f88a9823ae7e69bd9ead.json  codemodel-v2-15044e01b097838879b2.json  index-2023-11-19T16-11-23-0303.json  target-FVM-RG-Solver-Debug-1e8f47b74d0123287e89.json
build-course_work-Desktop_Qt_6_4_2_MSVC2019_64bit/Debug/.cmake/api/v1/reply.prev/: codemodel-v2-8fa6ece4f6aa4639aa90.json  index-2023-11-17T09-16-37-0908.json  target-FVM-RG-Solver-Debug-3bf370c18e5c93268458.json  target-FVM-RG-Solver_main-Debug-4e7386f43e3838297c61.json
build-course_work-Desktop_Qt_6_4_2_MSVC2019_64bit/Debug/.qtc_clangd/.cache/clangd/index/: AbstractSolver.cpp.F5D164D2BBB4D6A2.idx  DataWriter.cpp.F6D48FFC715F96F9.idx  __stddef_max_align_t.h.35E73D6DED2FB7E1.idx  algorithm.47B0A28676103868.idx  (+64 more)
build-course_work-Desktop_Qt_6_4_2_MSVC2019_64bit/Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  FVM-RG-Solver.lib  build.ninja  couette-solver-lib.lib
example/: CMakeLists.txt  couette-solver-lib_main.cpp
example-couette/: CMakeLists.txt  couette-solver-lib-ar_main.cpp  couette-solver-lib-o2o_main.cpp  couette-solver-lib_main.cpp  soda-solver-lib_main.cpp
example-shockwave/: CMakeLists.txt  nonlinear_border_system_solver.py  shockwave-solver-lib_main.cpp
hdr/: abstractsolver.h  additionalsolver.h  bordercondition.h  coeffsolver.h  datawriter.h  energycalc.h  global.h  godunovsolver.h  godunovsolversoda.h  grid.h  hllcsolver.h  lawchecker.h  macroparam.h  mixture.h  newton.h  numeric.h  observer.h  riemannsolver.h  startcondition.h  systemofequation.h
pics/case2/100cells_rho_0.03168_sigma_1/main/: couette-solver-lib-ar_main.cpp
pictures/2023.09.01/couette1/TC1/287804.047425/: pressure.txt  temp.txt  velocity.txt  velocity_tau.txt
pictures/2023.09.01/couette1/TC1/480295.271073/: density.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
pictures/soda/ideal_hll/: e.csv  pres.csv  rho.csv  vel.csv
plot/CreatePlots/: CreatePlots.py  style.mpltstyle
plot/SodaPlotOnly/: velocity.asv  velocity.fig  velocity.m
plot/SodaPlotOnly/fig/: velocity.fig  velocity.m
plot/SodaPlotOnly/toPlot/Exac/: density.txt  pressure.txt  velocity.txt  velocity_normal.txt
plot/SodaPlotOnly/toPlot/HLLC/: density.txt  pressure.txt  velocity_tau.txt
plot/SodaPlotOnly/toPlot/HLLE/: density.txt  pressure.txt  velocity.txt
plot/SodaPlotOnly/toPlot/Toro/: Velocity.csv
plot/fig/: all_density.fig  all_velocity.fig  pressure.fig  temperature.fig
plot/matlabPlot/: figPlot.asv  figPlot.m
plot/matlabPlot/1/: density.txt  densityO.txt  densityO2.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
plot/matlabPlot/2/: density.txt  densityO.txt  densityO2.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
plot/matlabPlot/3/: density.txt  densityO.txt  densityO2.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
plot/matlabPlot/4/: density.txt  densityO.txt  densityO2.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
plot/matlabPlot/5/: density.txt  densityO.txt  densityO2.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
plot/matlabPlot/fig/: all_velocity.fig  pressure.fig  pressureEvo.fig  pressureProfileEvo.fig
plot/matlabPlot/fig/concentration_change/: temperature.fig
plot/toPlot/: density.txt  densityO.txt  densityO2.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
prev_data/: pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
src/: AbstractSolver.cpp  DataWriter.cpp  additionalsolver.cpp  bordercondition.cpp  coeffsolver.cpp  energycalc.cpp  godunovsolver.cpp  godunovsolversoda.cpp  hllcsolver.cpp  lawchecker.cpp  mixture.cpp  numeric.cpp  observer.cpp  riemannsolver.cpp  startcondition.cpp  systemofequation.cpp
(+111 files in other folders)
